# bofa-crawler

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
bofa_crawler/: __init__.py  bank.py  browser.py  constants.py  crawler.py  expected_conditions.py  parser.py  util.py
tests/: test_bank.py  test_browser.py  test_crawler.py  test_parser.py  test_util.py
